--- a/PluginManager/app/src/main/res/layout/activity_main.xml
+++ b/PluginManager/app/src/main/res/layout/activity_main.xml
@@ -2,18 +2,41 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".ui.MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView android:id="@+id/rvPlugins"
+                                               android:layout_width="match_parent"
+                                               android:layout_height="0dp"
+                                               app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                                               app:layout_constraintBottom_toTopOf="@id/etPackageName"
+                                               app:layout_constraintTop_toTopOf="parent"
+                                               app:layout_constraintStart_toStartOf="parent"
+                                               app:layout_constraintEnd_toEndOf="parent"/>
+
+    <EditText android:id="@+id/etPackageName"
+              android:layout_width="0dp"
+              android:layout_height="wrap_content"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintEnd_toEndOf="parent"
+              android:hint="@string/package_name"
+              app:layout_constraintBottom_toTopOf="@id/etClassName"/>
+
+    <EditText android:id="@+id/etClassName"
+              android:layout_width="0dp"
+              android:layout_height="wrap_content"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintEnd_toEndOf="parent"
+              android:hint="@string/class_name"
+              app:layout_constraintBottom_toTopOf="@id/buttonAdd"/>
+
+    <Button android:id="@+id/buttonAdd"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:text="@string/add"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
